# homework

./: .gitignore  README.md
GAMES101_homework0/: CMakeLists.txt  main.cpp
GAMES101_homework1/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.hpp
GAMES101_homework2/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
GAMES101_homework3/: CMakeLists.txt  Shader.hpp  Texture.hpp  Triangle.hpp  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
GAMES101_homework4/: CMakeLists.txt  main.cpp
GAMES101_homework5/: CMakeLists.txt
GAMES101_homework6/: BVH.hpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  Vector.hpp
GAMES101_homework7/: Bounds3.hpp  CMakeLists.txt  Material.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp
GAMES101_homework8/: CMakeLists.txt
GAMES101_homework8/src/: rope.cpp
